Exercise_Starter_Files/course5_2_5Demo/archive/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaegerinstance-ingress
  namespace: course5
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaegerinstance-query
            port:
              number: 16686
